# Similar-Design-Finder

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  poetry.toml  pyproject.toml  run.sh
.github/workflows/: ci-dev.yml  cicd.yml  deploy-main.yml  deploy.yml  deployment.yml
data/raw/: evidently_table.csv
docker/: Dockerfile  docker-compose.yaml
docs/: SimilarDesignFinderServiceDoc.md
notebooks/: experiments.ipynb
src/app/: app.py
src/config/: config.py
src/database/: __init__.py  create_db.py  database.py  models.py  populate_db.py  postgres_manager.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2024_06_01_0031-23ca49617f5c_initial_migration.py  2024_06_02_2108-7b9fb2423c81_.py  2024_06_10_0149-21961f36016e_remove_dim_of_vector.py  2024_06_15_2221-2244e70e2f8b_initial_revision.py  2024_08_17_1758-0dd37236c766_add_rank_column_to_finder_query_.py
src/repositories/: __init__.py  collection.py  docs.py  user.py  user_activity.py
src/routers/: main.py  schemas.py
src/services/: documents.py  finder.py  postgres.py  repository.py  user.py
src/utils/: logger.py
