[tool.poetry]
name = "ml-system-design-assistant"
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
pgvector = "^0.2.5"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
fastapi = "^0.111.0"
alembic = "^1.13.1"
greenlet = "^3.0.3"
torch = [
    { version = "2.1.0", source = "pypi", markers = "sys_platform == 'darwin'" },
    { version = "2.1.0", source = "pytorch_cpu", markers = "sys_platform != 'darwin'" }
]
sentence-transformers = "^3.0.1"
pandas = "^2.2.2"
uvicorn = "^0.30.1"
prometheus-fastapi-instrumentator = "^7.0.0"
passlib = "^1.7.4"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
notebook = "^7.2.0"
pre-commit = "^3.7.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv"
]
# Include jupyter checks
extend-include = ["*.ipynb"]

line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "ANN",
    "RUF",
    "ASYNC"
]
ignore = ["ANN101"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
